--- a/miApp/templates/index.html
+++ b/miApp/templates/index.html
@@ -11,7 +11,7 @@
     <header>
         <div style="float: left;">Portafolio</div>
         <div style="float: right;">
-            <a href="#inicio">Inicio</a> 
+            <a href="">Inicio</a> 
             <a href="#proyectos">Proyectos</a>
         </div>
     </header>
