--- a/miApp/static/css/style.css
+++ b/miApp/static/css/style.css
@@ -1,60 +1,56 @@
 /* Estilos Generales */
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    background-color: #f9f9f9;
     margin: 0;
     padding: 0;
-    color: #333;
+    color: #4f4f4f;
 }
 
 header {
-    background-color: #e8e8e8;
-    padding: 10px 20px;
+    background-color: #ffffff;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 40px 20px;
     text-align: center;
+    font-size: 20px;
 }
 
-header div {
-    display: inline-block;
-    padding: 0 10px;
+header div:first-child {
+    font-size: 28px; /* Tamaño más grande para el título Portafolio */
+    font-weight: bold;
 }
 
 a {
     text-decoration: none;
-    color: #333;
+    color: #4f4f4f;
+    font-size: 18px; /* Tamaño de letra más grande */
+    margin: 0 20px; /* Mayor separación */
 }
 
 section {
+    background-color: #ffffff; /* Color uniforme para los bloques */
     margin: 20px;
-    padding: 20px;
-    border-radius: 5px;
-}
-
-/* Colores y estilos para cada sección */
-section:nth-of-type(1) {
-    background-color: #d6eaf8;
-}
-
-section:nth-of-type(2) {
-    background-color: #d1f2eb;
-}
-
-section:nth-of-type(3) {
-    background-color: #fdebd0;
+    padding: 25px;
+    border-radius: 10px; /* Bordes redondeados */
+    border: 1px solid #e0e0e0; /* Borde sutil */
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.05);
 }
 
 h2 {
-    color: #333;
+    color: #333333;
+    margin-bottom: 15px;
 }
 
 button {
-    background-color: #5499c7;
+    background-color: #4f4f4f;
     color: white;
     border: none;
     padding: 10px 20px;
     border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 button:hover {
-    background-color: #2980b9;
+    background-color: #333333;
 }
